fix: button alignment problem

--- a/src/components/AddTask/AddTask.module.css
+++ b/src/components/AddTask/AddTask.module.css
@@ -21,6 +21,10 @@
 	color: var(--gray-300);
 }
 
+.addTask:focus-within button {
+	display: flex;
+}
+
 .addTask button {
 	display: flex;
 	align-items: center;
@@ -36,6 +40,8 @@
 
 	font-size: 1.4rem;
 	font-weight: 700;
+
+	display: none;
 }
 
 .addTask svg {
